# aiogram_calendar

./: .gitignore  .pylintrc  LICENSE.txt  MANIFEST  Makefile  Manifest.in  README.md  aiogramcalendar.py  example_bot.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: pylint.yml  python-package.yml
aiogram3_calendar/: __init__.py  calendar_types.py  dialog_calendar.py  simple_calendar.py
aiogram3_calendar/tests/: __init__.py  test_dialog_calendar.py  test_simple_calendar.py
aiogram_calendar/: __init__.py  aiogramcalendar.py  calendar_types.py  common.py  dialog_calendar.py  schemas.py  simple_calendar.py
aiogram_calendar/tests/: test_dialog_calendar.py  test_simple_calendar.py
